tests/baselines/reference/callSignaturesWithParameterInitializers.errors.txt
==== tests/cases/compiler/callSignaturesWithParameterInitializers.ts (4 errors) ====
    // Optional parameters allow initializers only in implementation signatures
    
    function foo(x = 1) { }
    var f = function foo(x = 1) { }
    var f2 = (x: number, y = 1) => { }
    
    foo(1);
    foo();
    f(1);
    f();
    f2(1);
    f2(1, 2);
    
    class C {
        foo(x = 1) { }
    }
    
    var c: C;
    c.foo();
    c.foo(1);
    
    // these are errors
    interface I {
        (x = 1);
         ~~~~~
!!! callSignaturesWithParameterInitializers.ts(24,6): error TS2174: Default arguments are only allowed in implementation.
        foo(x: number, y = 1);
                       ~~~~~
!!! callSignaturesWithParameterInitializers.ts(25,20): error TS2174: Default arguments are only allowed in implementation.
    }
    
    var i: I;
    i();
    i(1);
    i.foo(1);
    i.foo(1, 2);
    
    // these are errors
    var a: {
        (x = 1);
         ~~~~~
!!! callSignaturesWithParameterInitializers.ts(36,6): error TS2174: Default arguments are only allowed in implementation.
        foo(x = 1);
            ~~~~~
!!! callSignaturesWithParameterInitializers.ts(37,9): error TS2174: Default arguments are only allowed in implementation.
    }
    
    a();
    a(1);
    a.foo();
    a.foo(1);
    
    var b = {
        foo(x = 1) { },
        a: function foo(x: number, y = 1) { },
        b: (x = 1) => { }
    }
    
    b.foo();
    b.foo(1);
    b.a(1);
    b.a(1, 2);
    b.b();
    b.b(1);
    